# card-engine

./: .clang-format  CMakeLists.txt  UI_MENTAL_MODEL.md
include/: battle.h  card.h  cardPile.h  renderer.h
include/UI/: anchorPoint.h  battleUI.h  cardUI.h  discardPileUI.h  drawPileUI.h  leftHandUI.h  rightHandUI.h
include/UI/configs/: battleUIConfig.h  cardUIConfig.h  discardPileUIConfig.h  drawPileUIConfig.h  leftHandUIConfig.h  rightHandUIConfig.h
include/core/: battle.h
include/engine/: animator.h  easing.h  eventBus.h  hitBoxComponent.h  hitBoxObject.h  renderObject.h  renderer.h  spriteComponent.h  transformComponent.h  transformObject.h
include/events/: cardDiscardedEvent.h  cardDrawnEvent.h  cardTransferredToRightEvent.h  drawPileRefilledEvent.h
include/raid/: captain.h
include/types/: handType.h
src/: animator.cpp  battle.cpp  cardPile.cpp  main.cpp  renderer.cpp
src/UI/: battleUI.cpp  discardPileUI.cpp  drawPileUI.cpp  leftHandUI.cpp  rightHandUI.cpp
